@tmux: added the copy and paste functionality

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,22 @@ set-option -g status-position top
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+
+# Allows me to use bind + mouse selection to copy and bind p to paste everywhere
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# Buffers to/from Mac clipboard, yay tmux book from pragprog
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+
 ##############################
 ### Color & Style Settings ###
 ##############################
