@tmux: added the copy fx from tmux clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,20 +50,23 @@ set-option -g status-position top
 set -g mouse on
 
 
-# Allows me to use bind + mouse selection to copy and bind p to paste everywhere
+# Allows me to use mouse selection + y to copy and bind p to paste (in vim) and
+# ctrl+v outside the terminal
+setw -g mode-keys vi
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+#bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'y' copy-selection
 
-# Buffers to/from Mac clipboard, yay tmux book from pragprog
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+## Buffers to/from Mac clipboard, yay tmux book from pragprog
+#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
-# set vi mode for copy mode
-setw -g mode-keys vi
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+## set vi mode for copy mode
 
 ##############################
 ### Color & Style Settings ###
