@updated tmux scroll with the mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,9 @@ set-option -g status-position top
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# allow the scroll in the terminal with the mouse
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Allows me to use mouse selection + y to copy and bind p to paste (in vim) and
 # ctrl+v outside the terminal
